人际关系管理功能模块

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'MyIconFont';
+  src: url('../assets/book.woff') format('woff');
+}
+
+.icon {
+  font-family: 'MyIconFont';
+  font-style: normal;
+  font-weight: normal;
+  speak: never; /* 辅助功能优化 */
+  -webkit-font-smoothing: antialiased; /* 抗锯齿 */
+}
+
+.icon-home:before {
+  content: "\e900"; /* 使用Unicode编码，具体编码查看字体文档 */
+}
 .moveBar {
   margin-bottom: 2px;
   height: 10px;
@@ -30,6 +46,33 @@
 .drag {
   -webkit-app-region: drag;
 }
-.noDrag {
+.no-drag {
   -webkit-app-region: no-drag;
+}
+.cursor-default {
+  cursor: default;
+}
+.font-7 {
+  font-size: 0.7em
+}
+.active-blue {
+  color: #3b73ff;
+}
+.bc-1 {
+  background-color: #fff9f2;
+}
+.bc-2 {
+  background-color: #ffebcd;
+}
+.bc-3 {
+  background-color: #ffe2b6;
+}
+.color-1 {
+  color: #fff9f2;
+}
+.color-2 {
+  color: #ffebcd;
+}
+.color-31 {
+  color: #ffe2b6;
 }
